Add shinigami article

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,6 +1,12 @@
 <!--
   The Side Bar
 -->
+<style>
+  body {
+      text-align: justify;
+  }
+  </style>
+  
 <div id="sidebar" class="d-flex flex-column align-items-end">
   <div class="profile-wrapper text-center">
     <div id="avatar">
@@ -99,4 +105,13 @@
 
   </div> <!-- .sidebar-bottom -->
 
+      <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-V8QSGFHYFB"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+        id = 'G-V8QSGFHYFB'
+        gtag('config', id);
+    </script>
 </div><!-- #sidebar -->
